Profile path is sent instead of the index to focus a user pod

Currently the index in ProfileInfoCache is sent to chrome://user-manager
to initially select the user pod when we use "Exit and childlock"
function. This was a fragile implementation, and unfortunately led to a
bug (596280) when SendUserList in user_manager_screen_handler.cc sent
the user list in a different order.

Now a profile path, which does not depend on any order, is sent instead.

BUG=596280

Review URL: https://codereview.chromium.org/1828143002

Cr-Commit-Position: refs/heads/master@{#384339}

Former-commit-id: c91db6cc7f37dd9d28c539a437423834fa058d10